--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clipmaster-9000",
+  "name": "electron-clip",
   "version": "1.0.0",
   "description": "A menubar application with a rich UI.",
   "main": "app/main.js",
