--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "app/main.js",
   "scripts": {
     "start": "electron .",
+    "report": "node server.js",
     "test": "mocha"
   },
-  "repository": "https://github.com/electron-in-action/clipmaster-9000.git",
-  "author": "Steve Kinney <hello@stevekinney.net>",
+  "repository": "https://github.com/HelpMe-Pls/electron-clip-with-testing",
+  "author": "Khoi Le <khoile5399@gmail.com>",
   "license": "MIT",
   "keywords": [
     "electron",
@@ -17,7 +18,12 @@
   "dependencies": {
     "electron": "3.0.10",
     "menubar": "5.2.3",
-    "request": "2.88.0"
+    "request": "2.88.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "multer": "^1.3.0",
+    "uuid": "^3.1.0",
+    "write-file": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "5.10.0",
